Revision history for Test-Harness

2.99_04
        - Fixed bug where 'Result: FAIL' would be printed at the end of a test
          run if there were unexpectedly succeeding tests.

2.99_03 2007-10-06
        - Refactored all display specific code out of TAP::Harness.
        - Relaxed strict parsing of skip plan for pre v13 TAP.
        - Elapsed hi-res time is now displayed in integer milliseconds
          instead of fractional seconds.
        - prove stops running if any command-line switches are invalid.
        - prove -v would try to print an undef.
        - Added support for multiplexed and forked parallel tests. Use
          prove -j 9 to run tests in parallel and prove -j 9 --fork to
          fork. These features are experimental and currently
          unavailable on Windows.
        - Rationalized the management of the environment that we give to
          test scripts (PERL5LIB, PERL5OPT, switches).
        - Fixed handling of STDIN (we no longer close it) for test
          scripts.
        - Performance enhancements. Parser is now 30% - 40% faster.

2.99_02 2007-09-07
        - Ensure prove (and App::Prove) sort any recursively
          discovered tests
        - It is now possible to register multiple callback handlers for
          a particular event.
        - Added before_runtests, after_runtests callbacks to
          TAP::Harness.
        - Moved logic of prove program into App::Prove.
        - Added simple machine readable summary.
        - Performance improvement: The processing pipeline within
          TAP::Parser is now a closure which speeds up access to the
          various attribtes it needs.
        - Performance improvement: Test count spinner now updates
          exponentially less frequently as the count increases which
          saves a lot of I/O on big tests.
        - More improvements in test coverage from Leif.
        - Fixes to TAP spooling - now captures YAML blocks correctly.