@@ -4,7 +4,7 @@
 use strict;
 use lib 't/lib';
 
-use Test::More tests => 76;
+use Test::More tests => 79;
 
 use TAP::Parser;
 use TAP::Parser::Iterator;
@@ -114,6 +114,9 @@ ok $agg->has_errors, '... and it should report true if there are errors';
 can_ok $agg, 'get_status';
 is $agg->get_status, 'FAIL', '... and it should tell us the tests failed';
 
+can_ok $agg, 'all_passed';
+ok !$agg->all_passed, '... and it should tell us not all tests passed';
+
 # coverage testing
 
 # _get_parsers
@@ -208,6 +211,8 @@ is $agg->get_status, 'PASS',
   '... and the status should be passing';
 ok !$agg->has_errors,
   '.... but it should not report any errors';
+ok $agg->all_passed,
+  '... bonus tests should be passing tests, too';
 
 # 2. !failed && !todo_passed && parse_errors
 
